content/documentation/v1.19/quick-start/index.adoc
---
title: "Quick install"
date: 2019-03-20T09:04:38+02:00
aliases:
- /quick-start
- /getting-started
- /gettingstarted
- /documentation/getting-started
- /documentation/latest/getting-started
draft: false
---

:keywords: Kiali Quick Install
:icons: font
:imagesdir: /images/quickinstall/
:sectlinks:

icon:lightbulb[size=1x]{nbsp} This page is intended for users installing Kiali for the first time, not recomended for production environments. In case of custom installations, visit the link:{{< ref "/documentation/v1.19/installation-guide" >}}[installation guide].

== Install via Kiali Operator

This option installs the Kiali Operator and the Kiali CR with default options. If you are running with an https://github.com/istio/istio/releases[upstream Istio release], you will probably want to pass in _--accessible-namespaces="**"_ since that is the typical way Kiali is expected to run within an upstream Istio environment.


When the Kiali CR is created it triggers the operator to then install Kiali. Kiali is able to access existing namespaces, but it required a CR update to access future namespaces. See link:{{< ref "/documentation/v1.19/installation-guide#_namespace_management" >}}[Namespace Management] for more information. Run the install script via this command:

[source,bash]
----
  bash <(curl -L https://kiali.io/getLatestKialiOperator) --accessible-namespaces '**'
----

=== Open the UI

Once Istio, Maistra or the Kiali Operator has installed Kiali, and the Kiali pod has successfully started, you can access the UI. Please, check the link:{{< ref "/documentation/v1.19/faq/general#how-do-i-access-kiai" >}}[FAQ: How do I access Kiali UI?]

icon:bullhorn[size=1x]{nbsp} The credentials you use on the login screen depend on the authentication strategy that was configured for Kiali. See link:{{< ref "/documentation/v1.19/installation-guide#_login_options" >}}[Login Options] for more details.

== Install via `istioctl`

Install Kiali via https://istio.io/latest/docs/setup/additional-setup/config-profiles/[Istio profiles]. The `demo` profile is designed to showcase Istio functionality with modest resource requirements. It installs both core and add-on components such as Kiali, Jaeger, Grafana, Prometheus, Istio and Istio Ingress/Egress gateways.

Once you have the `istioctl` in your PATH, execute the following:

[source,bash]
----
istioctl install --set profile=demo
----

=== Access to the UI

The Istio client has an easy method to access to all of its UIs. To get access to the Kiali UI:

[source,bash]
----
istioctl dashboard kiali
----

icon:bullhorn[size=1x]{nbsp} The default credentials to log in are: `admin/admin`. It is highly recommended to change them as soon as possible, see the link:{{< ref "/documentation/v1.19/installation-guide#_login_options" >}}[Login Options]

=== Running on OpenShift

When Kiali runs on OpenShift it needs access to some OpenShift specific resources in order to function properly, which can be done using the following commands after Kiali has been installed:

----
$ oc patch clusterrole kiali -p '[{"op":"add", "path":"/rules/-", "value":{"apiGroups":["apps.openshift.io"], "resources":["deploymentconfigs"],"verbs": ["get", "list", "watch"]}}]' --type json
$ oc patch clusterrole kiali -p '[{"op":"add", "path":"/rules/-", "value":{"apiGroups":["project.openshift.io"], "resources":["projects"],"verbs": ["get"]}}]' --type json
$ oc patch clusterrole kiali -p '[{"op":"add", "path":"/rules/-", "value":{"apiGroups":["route.openshift.io"], "resources":["routes"],"verbs": ["get"]}}]' --type json
----

== More installation details

Find more detailed information on the installation process in the link:{{< ref "/documentation/v1.19/installation-guide" >}}[installation guide].
